[metadata]
name = pyprof2calltree
version = 1.4.4
description = Help visualize profiling data from cProfile with kcachegrind and qcachegrind
long_description = file: README.rst
url = https://github.com/pwaller/pyprof2calltree/
author = Olivier Grisel
author_email = olivier.grisel@ensta.org
maintainer = Peter Waller
maintainer_email = p@pwaller.net
license = MIT
keywords =
    kcachegrind
    kde
    profiler
    programming
    qcachegrind
    tool
    visualization
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications :: KDE
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Desktop Environment :: K Desktop Environment (KDE)
    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance
    Topic :: System :: System Shells
    Topic :: Utilities

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
py_modules =
    pyprof2calltree
zip_safe = true

[options.entry_points]
console_scripts =
    pyprof2calltree = pyprof2calltree:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88

[isort]
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
